Added card to homepage.

--- a/index.html
+++ b/index.html
@@ -20,35 +20,40 @@
 
     <!-- Start your project here-->
     <header>
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img class='logo' src='img/ucl-logo-white.png'></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/history.html">History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/research.html">The Research</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/impact.html">Impact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/get-involved.html">Get Involved</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/team.html">The Team</a>
-                    </li>
-                </ul>
-                <!--
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img class='logo' src='img/ucl-logo-white.png'>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/history.html">History</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/research.html">The Research</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/impact.html">Impact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/get-involved.html">Get Involved</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team.html">The Team</a>
+                        </li>
+                    </ul>
+                    <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 </form>-->
@@ -153,7 +158,32 @@
                     <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
                     <p>VIDEO HERE</p>
                     <h1 class="font-bold light-blue-text my-5">Who We are</h1>
-                    <p>Brief history and people working</p>
+                    
+                    <!--Card-->
+                    <div class="card card-cascade wider reverse my-4">
+
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid">
+                            <a href="/history.html">
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--/Card image-->
+
+                        <!--Card content-->
+                        <div class="card-body text-center">
+                            <p class="card-text">The Vision and Imaging Science group at UCL consists of 8 academic staff and more than 40 post-docs and
+                                    students. We host numerous seminars and reading groups, and organize several related M.Sc. courses.
+                                    Particular interests include face recognition, medical image analysis, statistical modelling of colour
+                                    information, tracking for augmented reality, diffusion tensor imaging, inverse problems and building
+                                    mathematical models of shape and appearance.
+                            </p>
+                        </div>
+                        <!--/.Card content-->
+
+                    </div>
+                    <!--/.Card-->
                     <h1 class="font-bold light-blue-text my-5">Our Work</h1>
                 </div>
             </div>
@@ -244,10 +274,10 @@
                 <div class="col-md-6">
                     <h5 class="title">Address</h5>
                     <p>Department of Computer Science
-                    <br>University College London
-                    <br>Gower Street
-                    <br>London
-                    <br>WC1E 6BT</p>
+                        <br>University College London
+                        <br>Gower Street
+                        <br>London
+                        <br>WC1E 6BT</p>
                 </div>
                 <!--/.First column-->
 
