--- a/index.html
+++ b/index.html
@@ -100,59 +100,75 @@
                     </ul>
                 </div>
                 <div class='col-md-6 text-center'>
-                    <a class="twitter-timeline" data-width="100%" data-height='500px' href="https://twitter.com/RITimagingsci?ref_src=twsrc%5Etfw">Tweets by RITimagingsci</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <a class="twitter-timeline" data-width="100%" data-height='500px' href="https://twitter.com/RITimagingsci?ref_src=twsrc%5Etfw">Tweets by RITimagingsci</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
+
             <div class='row'>
-                <!--Carousel Wrapper-->
-                <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
-                    <!--Indicators-->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-2" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-2" data-slide-to="2"></li>
-                    </ol>
-                    <!--/.Indicators-->
-                    <!--Slides-->
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <div class="view hm-black-light">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
-                                <div class="mask"></div>
+                <div class='col-md-12 text-center'>
+                    <!--Carousel Wrapper-->
+                    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+                        <!--Indicators-->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                        </ol>
+                        <!--/.Indicators-->
+                        <!--Slides-->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <div class="view hm-black-light">
+                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
+                                    <div class="mask"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Light mask</h3>
+                                    <p>First text</p>
+                                </div>
                             </div>
-                            <div class="carousel-caption">
-                                <h3 class="h3-responsive">Light mask</h3>
-                                <p>First text</p>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view hm-black-strong">
+                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
+                                    <div class="mask"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Strong mask</h3>
+                                    <p>Secondary text</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view hm-black-slight">
+                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
+                                    <div class="mask"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Slight mask</h3>
+                                    <p>Third text</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <!--Mask color-->
-                            <div class="view hm-black-strong">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
-                                <div class="mask"></div>
-                            </div>
-                            <div class="carousel-caption">
-                                <h3 class="h3-responsive">Strong mask</h3>
-                                <p>Secondary text</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!--Mask color-->
-                            <div class="view hm-black-slight">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-                                <div class="mask"></div>
-                            </div>
-                            <div class="carousel-caption">
-                                <h3 class="h3-responsive">Slight mask</h3>
-                                <p>Third text</p>
-                            </div>
-                        </div>
+                        <!--/.Carousel Wrapper-->
+
                     </div>
                     <!--/.Carousel Wrapper-->
+                    <!--/.Slides-->
+                    <!--Controls-->
+                    <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    <!--/.Controls-->
                     <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
                     <p>VIDEO HERE</p>
                     <h1 class="font-bold light-blue-text my-5">Who We are</h1>
-                    
                     <!--Card-->
                     <div class="card card-cascade wider reverse my-4">
 
@@ -167,11 +183,11 @@
 
                         <!--Card content-->
                         <div class="card-body text-center">
-                            <p class="card-text">The Vision and Imaging Science group at UCL consists of 8 academic staff and more than 40 post-docs and
-                                    students. We host numerous seminars and reading groups, and organize several related M.Sc. courses.
-                                    Particular interests include face recognition, medical image analysis, statistical modelling of colour
-                                    information, tracking for augmented reality, diffusion tensor imaging, inverse problems and building
-                                    mathematical models of shape and appearance.
+                            <p class="card-text">The Vision and Imaging Science group at UCL consists of 8 academic staff and more than 40 post-docs
+                                and students. We host numerous seminars and reading groups, and organize several related
+                                M.Sc. courses. Particular interests include face recognition, medical image analysis, statistical
+                                modelling of colour information, tracking for augmented reality, diffusion tensor imaging,
+                                inverse problems and building mathematical models of shape and appearance.
                             </p>
                         </div>
                         <!--/.Card content-->
@@ -179,101 +195,80 @@
                     </div>
                     <!--/.Card-->
                     <h1 class="font-bold light-blue-text my-5">Our Work</h1>
-                    <!--/.Slides-->
-                    <!--Controls-->
-                    <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                    <!--/.Controls-->
                 </div>
-                <!--/.Carousel Wrapper-->
             </div>
-            <div class='row'>
-            	<div class='col-md-12 text-center'>
-	                <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
-	                <p>VIDEO HERE</p>
-	                <h1 class="font-bold light-blue-text my-5">Who We are</h1>
-	                <p>Brief history and people working</p>
-	                <h1 class="font-bold light-blue-text my-5">Our Work</h1>
-	            </div>
-        </div>
 
 
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <!--Card-->
-                    <div class="card">
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
-                            <a href="#">
-                                <div class="mask"></div>
-                            </a>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <!--Card-->
+                        <div class="card">
+                            <!--Card image-->
+                            <div class="view overlay hm-white-slight">
+                                <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
+                                <a href="#">
+                                    <div class="mask"></div>
+                                </a>
+                            </div>
+                            <!--Card content-->
+                            <div class="card-body">
+                                <!--Title-->
+                                <h4 class="card-title">Research 1</h4>
+                                <!--Text-->
+                                <p class="card-text">Brief description of some cool research</p>
+                                <a href="/research.html" class="btn btn-primary">Learn More</a>
+                            </div>
                         </div>
-                        <!--Card content-->
-                        <div class="card-body">
-                            <!--Title-->
-                            <h4 class="card-title">Research 1</h4>
-                            <!--Text-->
-                            <p class="card-text">Brief description of some cool research</p>
-                            <a href="/research.html" class="btn btn-primary">Learn More</a>
-                        </div>
+                        <!--/.Card-->
                     </div>
-                    <!--/.Card-->
-                </div>
 
-                <div class="col">
-                    <!--Card-->
-                    <div class="card">
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
-                            <a href="#">
-                                <div class="mask"></div>
-                            </a>
+                    <div class="col">
+                        <!--Card-->
+                        <div class="card">
+                            <!--Card image-->
+                            <div class="view overlay hm-white-slight">
+                                <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
+                                <a href="#">
+                                    <div class="mask"></div>
+                                </a>
+                            </div>
+                            <!--Card content-->
+                            <div class="card-body">
+                                <!--Title-->
+                                <h4 class="card-title">Research 2</h4>
+                                <!--Text-->
+                                <p class="card-text">Brief description of some cool research</p>
+                                <a href="/research.html" class="btn btn-primary">Learn More</a>
+                            </div>
                         </div>
-                        <!--Card content-->
-                        <div class="card-body">
-                            <!--Title-->
-                            <h4 class="card-title">Research 2</h4>
-                            <!--Text-->
-                            <p class="card-text">Brief description of some cool research</p>
-                            <a href="/research.html" class="btn btn-primary">Learn More</a>
-                        </div>
+                        <!--/.Card-->
                     </div>
-                    <!--/.Card-->
-                </div>
 
-                <div class="col">
-                    <!--Card-->
-                    <div class="card">
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
-                            <a href="#">
-                                <div class="mask"></div>
-                            </a>
+                    <div class="col">
+                        <!--Card-->
+                        <div class="card">
+                            <!--Card image-->
+                            <div class="view overlay hm-white-slight">
+                                <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
+                                <a href="#">
+                                    <div class="mask"></div>
+                                </a>
+                            </div>
+                            <!--Card content-->
+                            <div class="card-body">
+                                <!--Title-->
+                                <h4 class="card-title">Research 3</h4>
+                                <!--Text-->
+                                <p class="card-text">Brief description of some cool research</p>
+                                <a href="/research.html" class="btn btn-primary">Learn More</a>
+                            </div>
                         </div>
-                        <!--Card content-->
-                        <div class="card-body">
-                            <!--Title-->
-                            <h4 class="card-title">Research 3</h4>
-                            <!--Text-->
-                            <p class="card-text">Brief description of some cool research</p>
-                            <a href="/research.html" class="btn btn-primary">Learn More</a>
-                        </div>
+                        <!--/.Card-->
                     </div>
-                    <!--/.Card-->
-                </div>
 
+                </div>
             </div>
-        </div>
     </main>
     <!-- /Start your project here-->
 
