Adding text. Adding photos.

--- a/impact.html
+++ b/impact.html
@@ -91,8 +91,9 @@
                     <h2>- AI</h2>
                     <p>Artifically Intelligent computers can, through machine learning, use visual data received from pictures or videos for example. Different and exciting data can be extracted from a picture or video if we analyse it using Vision and Imaging analysis. This allows more diverse and nuanced applications of AI possible.</p>
                     <h2>- Image organisation</h2>
+                    <p>This is automatically categorising photos based on what is in the photo. This, for example, can allow a user to search through a library of photos using keywords; photos including objects or features that relate to that word can be given without any need to manually tag the photo previously.</p>
                     <h2>- Navigation Vehicles</h2>
-                    <h2>- Medical image processing</h2>
+                    <h2>- Medical Image Processing</h2>
                     <h2>- Visual Effects</h2>
                 </div>
             </div>
