--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/index.html">
                     <img class='logo' src='img/ucl-logo-white.png'>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"
