--- a/impact.html
+++ b/impact.html
@@ -88,11 +88,12 @@
                 <div class="col-md-12 text-center">
                     <h2>- Automatic Inspection</h2>
                     <p> Factories are increasingly relying less on man-power and more on robotic and automated systems. With factory robots that can 'see', defect recognition and quality control processes are greatly improved.<p>
-                    <h2>- AI</h2>
+                    <h2>- Artificial Intelligence</h2>
                     <p>Artifically Intelligent computers can, through machine learning, use visual data received from pictures or videos for example. Different and exciting data can be extracted from a picture or video if we analyse it using Vision and Imaging analysis. This allows more diverse and nuanced applications of AI possible.</p>
-                    <h2>- Image organisation</h2>
+                    <h2>- Image Organisation</h2>
                     <p>This is automatically categorising photos based on what is in the photo. This, for example, can allow a user to search through a library of photos using keywords; photos including objects or features that relate to that word can be given without any need to manually tag the photo previously.</p>
-                    <h2>- Navigation Vehicles</h2>
+                    <h2>- Vehicles and Driving</h2>
+                    <p>'Seeing' cars, planes, drones and amphibius vehicles have many exciting possible uses. Vision in these vehicles can enhance autonomous vehicles, driving safety, navigation, surveillance and miltitary applications (e.g. guided missiles).</p>
                     <h2>- Medical Image Processing</h2>
                     <h2>- Visual Effects</h2>
                 </div>
