--- a/impact.html
+++ b/impact.html
@@ -93,9 +93,11 @@
                     <h2>- Image Organisation</h2>
                     <p>This is automatically categorising photos based on what is in the photo. This, for example, can allow a user to search through a library of photos using keywords; photos including objects or features that relate to that word can be given without any need to manually tag the photo previously.</p>
                     <h2>- Vehicles and Driving</h2>
-                    <p>'Seeing' cars, planes, drones and amphibius vehicles have many exciting possible uses. Vision in these vehicles can enhance autonomous vehicles, driving safety, navigation, surveillance and miltitary applications (e.g. guided missiles).</p>
+                    <p>'Seeing' cars, planes, drones and amphibius vehicles have many exciting possible uses. Vision in these vehicles can enhance autonomous vehicles, driving safety, navigation, surveillance and miltitary applications, for example, guided missiles).</p>
                     <h2>- Medical Image Processing</h2>
+                    <p>Image inspection and analysis can help doctors analyse patient images from all kinds of scanning methods such as endoscopy, MRI and ultrasound scans, by identifying and enhancing certain features in an image.</p>
                     <h2>- Visual Effects</h2>
+                    <p>Visual Effects in film and animation have progressed impressively over the past few decades thanks to the financial backing of the film industry. Vision and Imaging technologies can be used to enhance visual effects in both the filming and editing of a movie.</p>
                 </div>
             </div>
         </div>
