--- a/get-involved.html
+++ b/get-involved.html
@@ -137,7 +137,17 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">Social Media</h1>
-                    <p>Links and interactive stuff here</p>
+                    <a class="icon-link round facebook fill" href="#"><i class="fa fa-facebook"></i></a>
+                    <a class="icon-link round tumblr fill"><i class="fa fa-tumblr"></i></a>
+                    <a class="icon-link round linkedin fill"><i class="fa fa-linkedin"></i></a>
+                    <a class="icon-link round twitter fill"><i class="fa fa-twitter"></i></a>
+                    <a class="icon-link round google-plus fill"><i class="fa fa-google-plus"></i></a>
+                    <a class="icon-link round reddit fill"><i class="fa fa-reddit"></i></a>
+                    <a class="icon-link round youtube fill"><i class="fa fa-youtube"></i></a>
+                    <a class="icon-link round pinterest fill"><i class="fa fa-pinterest"></i></a>
+                    <a class="icon-link round github fill"><i class="fa fa-github"></i></a>
+                    <a class="icon-link round envelope fill"><i class="fa fa-envelope"></i></a>
+                    <a class="icon-link round soundcloud fill"><i class="fa fa-soundcloud"></i></a>
                 </div>
             </div>
         </div>
