--- a/get-involved.html
+++ b/get-involved.html
@@ -88,7 +88,7 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">Contact Us</h1>
-                    <p>Text here</p>
+                    <p>If you a question or inquiry, do not hesitate to get in contact with us using the form below.</p>
                 </div>
             </div>
             <!-- Form contact -->
