--- a/get-involved.html
+++ b/get-involved.html
@@ -16,7 +16,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/calendar.css" rel="stylesheet">
     <link href="css/icons.css" rel="stylesheet">    
-    <link href='css/map.css' rel='stylesheet' type='text/css'>
+    <link href='css/map.css' rel='stylesheet'>
 </head>
 
 <body>
