Added video to home page.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
                     </div>
 
                     <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
-                    <p>VIDEO HERE</p>
+                    <!-- 16:9 aspect ratio -->
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YUaEPV7Qz1c"></iframe>
+                    </div>
                     <h1 class="font-bold light-blue-text my-5">Who We are</h1>
                     <!--Card-->
                     <div class="card card-cascade wider reverse my-4">
