add links to profiles on team page

--- a/team.html
+++ b/team.html
@@ -107,6 +107,10 @@
                                         <h5 class="mt-2 mb-2">Interests</h5>
                                         <p class='card-interests'>Colour imaging, segmentation and tracking, medical imaging, MRI, tensor image processing,
                                             audio processing.</p>
+                                        <div class='profile-links'>
+                                            <a class='more-link' href='#'>Profile</a>
+                                            <a class='more-link-2' href='#'>Personal</a>
+                                        </div>
                                     </div>
 
                                 </div>
@@ -116,13 +120,6 @@
                 </div>
 
             </section>
-            <div class='row'>
-                <div class='col-md-3'>
-                    <div class='card z-depth-2'>
-                        <img src='http://vis.cs.ucl.ac.uk/fileadmin/_processed_/9/a/csm_alexander_5d2d2da664.jpg'> lorem ipsum
-                    </div>
-                </div>
-            </div>
         </div>
     </main>
     <!-- /Start your project here-->
