--- a/get-involved.html
+++ b/get-involved.html
@@ -133,7 +133,7 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">Upcoming Events</h1>
-                    <p>Have a look at some of our upcoming events below. Come along and get involved!</p>
+                    <p>Have a look at some of our upcoming events and lectures below. Come along and get involved!</p>
                 </div>
             </div>
         </div>
@@ -209,21 +209,9 @@
                         </div>
 
                         <ul>
-                            <li class="single-event" data-start="09:30" data-end="10:30" data-content="event-abs-circuit" data-event="event-1">
+                            <li class="single-event" data-start="09:00" data-end="10:00" data-content="event-image-processing" data-event="event-1">
                                 <a href="#0">
-                                    <em class="event-name">Abs Circuit</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="11:00" data-end="12:30" data-content="event-rowing-workout" data-event="event-2">
-                                <a href="#0">
-                                    <em class="event-name">Rowing Workout</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="14:00" data-end="15:15" data-content="event-yoga-1" data-event="event-3">
-                                <a href="#0">
-                                    <em class="event-name">Yoga Level 1</em>
+                                    <em class="event-name">Image Processing Lecture</em>
                                 </a>
                             </li>
                         </ul>
@@ -235,27 +223,9 @@
                         </div>
 
                         <ul>
-                            <li class="single-event" data-start="10:00" data-end="11:00" data-content="event-rowing-workout" data-event="event-2">
+                            <li class="single-event" data-start="13:00" data-end="15:00" data-content="event-computer-graphics" data-event="event-3">
                                 <a href="#0">
-                                    <em class="event-name">Rowing Workout</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="11:30" data-end="13:00" data-content="event-restorative-yoga" data-event="event-4">
-                                <a href="#0">
-                                    <em class="event-name">Restorative Yoga</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="13:30" data-end="15:00" data-content="event-abs-circuit" data-event="event-1">
-                                <a href="#0">
-                                    <em class="event-name">Abs Circuit</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="15:45" data-end="16:45" data-content="event-yoga-1" data-event="event-3">
-                                <a href="#0">
-                                    <em class="event-name">Yoga Level 1</em>
+                                    <em class="event-name">Computer Graphics Practical</em>
                                 </a>
                             </li>
                         </ul>
@@ -267,27 +237,9 @@
                         </div>
 
                         <ul>
-                            <li class="single-event" data-start="09:00" data-end="10:15" data-content="event-restorative-yoga" data-event="event-4">
+                            <li class="single-event" data-start="09:00" data-end="11:00" data-content="event-image-processing" data-event="event-4">
                                 <a href="#0">
-                                    <em class="event-name">Restorative Yoga</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="10:45" data-end="11:45" data-content="event-yoga-1" data-event="event-3">
-                                <a href="#0">
-                                    <em class="event-name">Yoga Level 1</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="12:00" data-end="13:45" data-content="event-rowing-workout" data-event="event-2">
-                                <a href="#0">
-                                    <em class="event-name">Rowing Workout</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="13:45" data-end="15:00" data-content="event-yoga-1" data-event="event-3">
-                                <a href="#0">
-                                    <em class="event-name">Yoga Level 1</em>
+                                    <em class="event-name">Image Processing Lecture</em>
                                 </a>
                             </li>
                         </ul>
@@ -304,24 +256,6 @@
                                     <em class="event-name">Abs Circuit</em>
                                 </a>
                             </li>
-
-                            <li class="single-event" data-start="12:00" data-end="13:45" data-content="event-restorative-yoga" data-event="event-4">
-                                <a href="#0">
-                                    <em class="event-name">Restorative Yoga</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="15:30" data-end="16:30" data-content="event-abs-circuit" data-event="event-1">
-                                <a href="#0">
-                                    <em class="event-name">Abs Circuit</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="17:00" data-end="18:30" data-content="event-rowing-workout" data-event="event-2">
-                                <a href="#0">
-                                    <em class="event-name">Rowing Workout</em>
-                                </a>
-                            </li>
                         </ul>
                     </li>
 
@@ -334,18 +268,6 @@
                             <li class="single-event" data-start="10:00" data-end="11:00" data-content="event-rowing-workout" data-event="event-2">
                                 <a href="#0">
                                     <em class="event-name">Rowing Workout</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="12:30" data-end="14:00" data-content="event-abs-circuit" data-event="event-1">
-                                <a href="#0">
-                                    <em class="event-name">Abs Circuit</em>
-                                </a>
-                            </li>
-
-                            <li class="single-event" data-start="15:45" data-end="16:45" data-content="event-yoga-1" data-event="event-3">
-                                <a href="#0">
-                                    <em class="event-name">Yoga Level 1</em>
                                 </a>
                             </li>
                         </ul>
