Added social media links.

--- a/get-involved.html
+++ b/get-involved.html
@@ -298,38 +298,17 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">Social Media</h1>
-                    <a class="icon-link round facebook fill" href="#">
+                    <a class="icon-link round facebook fill" href="https://www.facebook.com/UCLCS.Home/">
                         <i class="fa fa-facebook"></i>
                     </a>
-                    <a class="icon-link round tumblr fill">
-                        <i class="fa fa-tumblr"></i>
-                    </a>
-                    <a class="icon-link round linkedin fill">
+                    <a class="icon-link round linkedin fill" href="http://www.linkedin.com/groups?gid=4046543&trk=myg_ugrp_ovr">
                         <i class="fa fa-linkedin"></i>
                     </a>
-                    <a class="icon-link round twitter fill">
+                    <a class="icon-link round twitter fill" href="https://twitter.com/uclcs">
                         <i class="fa fa-twitter"></i>
                     </a>
-                    <a class="icon-link round google-plus fill">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a class="icon-link round reddit fill">
-                        <i class="fa fa-reddit"></i>
-                    </a>
-                    <a class="icon-link round youtube fill">
+                    <a class="icon-link round youtube fill" href="https://www.youtube.com/user/UCLComputerScience">
                         <i class="fa fa-youtube"></i>
-                    </a>
-                    <a class="icon-link round pinterest fill">
-                        <i class="fa fa-pinterest"></i>
-                    </a>
-                    <a class="icon-link round github fill">
-                        <i class="fa fa-github"></i>
-                    </a>
-                    <a class="icon-link round envelope fill">
-                        <i class="fa fa-envelope"></i>
-                    </a>
-                    <a class="icon-link round soundcloud fill">
-                        <i class="fa fa-soundcloud"></i>
                     </a>
                 </div>
             </div>
