Moved twitter feed to get involved page.

--- a/get-involved.html
+++ b/get-involved.html
@@ -311,6 +311,10 @@
                         <i class="fa fa-youtube"></i>
                     </a>
                 </div>
+                <div class='col-md-6 text-center'>
+                    <a class="twitter-timeline" data-width="100%" data-height='500px' href="https://twitter.com/RITimagingsci?ref_src=twsrc%5Etfw">Tweets by RITimagingsci</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
             </div>
         </div>
     </main>
