--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                                     <span class="indigo-text font-bold">IMAGING SCIENCE</span>
                                 </h1>
                                 <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Making computers see like us.</h5>
-                                <a class="btn btn-light-blue btn-lg wow fadeInDown" data-wow-delay="0.3s">Learn more</a>
-                                <a class="btn btn-indigo btn-lg wow fadeInDown" data-wow-delay="0.3s">About</a>
+                                <a class="btn btn-light-blue btn-lg wow fadeInDown" href = "/research.html" data-wow-delay="0.3s">Learn more</a>
+                                <a class="btn btn-indigo btn-lg wow fadeInDown" href = "/team.html" data-wow-delay="0.3s">About</a>
                             </div>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
     <main>
         <div class="container">
             <div class="row py-5 mt-4">
-                <div class="col-md-6 text-center">
+                <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">What We Do</h1>
                     <p>Computer vision and image processing aims to extract useful information from images and movies.</p>
                     <p>More intro here</p>
@@ -98,10 +98,6 @@
                         <li>Visual inspection for production lines</li>
                         <li>Building 3D models of the real world</li>
                     </ul>
-                </div>
-                <div class='col-md-6 text-center'>
-                    <a class="twitter-timeline" data-width="100%" data-height='500px' href="https://twitter.com/RITimagingsci?ref_src=twsrc%5Etfw">Tweets by RITimagingsci</a>
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
 
