Testing content within timetable, fixed header image.

--- a/get-involved.html
+++ b/get-involved.html
@@ -66,7 +66,7 @@
         </nav>
 
         <!-- Intro Section -->
-        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/yeh.jpeg">
+        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/woman_on_laptop.jpg">
             <div class="full-bg-img">
                 <div class="container flex-center">
                     <div class="row pt-5 mt-3">
@@ -237,9 +237,9 @@
                         </div>
 
                         <ul>
-                            <li class="single-event" data-start="09:00" data-end="11:00" data-content="event-image-processing" data-event="event-4">
+                            <li class="single-event" data-start="17:00" data-end="18:00" data-content="event-vision-reading-group" data-event="event-1">
                                 <a href="#0">
-                                    <em class="event-name">Image Processing Lecture</em>
+                                    <em class="event-name">Computer Vision Reading Group</em>
                                 </a>
                             </li>
                         </ul>
@@ -289,6 +289,8 @@
                     <div class="event-info"></div>
                     <div class="body-bg"></div>
                 </div>
+                <a href="#0" class="close">Close</a>
+                
             </div>
 
             <div class="cover-layer"></div>
